--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -10,4 +10,5 @@ courses-edit=Edit Course #{0} "{1}".
 
 courses-delete-confirmation=Are you sure?
 
-sign-in=Login
+course-name-not-valid=Course name is not valid - should be not empty and contain at least 5 symbols.
+courses-saving-exception=Can not save course because of an internal error.
