03-service-builder: service builder integration

--- a/modules/liferay-courses-service/build.gradle
+++ b/modules/liferay-courses-service/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
 	compileOnly project(":modules:liferay-courses-api")
+	compileOnly project(":modules:liferay-courses-manager:liferay-courses-manager-api")
 	compileOnly group: "com.liferay.portal", name: "release.portal.api"
 }
