04-service-builder-advanced: Audit Information - UI

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -4,6 +4,9 @@ course=Course
 courses-course-id=Course ID
 courses-name=Name
 courses-description=Description
+courses-user=Author
+courses-create-date=Created On
+courses-modified-date=Modified On
 
 courses-add-new=Add a new Course
 courses-edit=Edit Course #{0} "{1}".
