05-panel-apps: LiferayCoursesAdminPortlet widget and Panel App

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -1,4 +1,5 @@
 javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesPortlet=Liferay Courses
+javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesAdminPortlet=Liferay Courses
 
 course=Course
 courses-course-id=Course ID
