05-panel-apps: PanelApp category

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -13,3 +13,6 @@ courses-add-new=Add a new Course
 courses-edit=Edit Course #{0} "{1}".
 
 courses-delete-confirmation=Are you sure?
+
+# Panel App
+category.site_administration.liferay_book=Liferay Book
