05-panel-apps: Courses and Lectures management

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -1,6 +1,7 @@
 javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesPortlet=Liferay Courses
 javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesAdminPortlet=Liferay Courses
 
+# Courses
 course=Course
 courses-course-id=Course ID
 courses-name=Name
@@ -12,7 +13,24 @@ courses-modified-date=Modified On
 courses-add-new=Add a new Course
 courses-edit=Edit Course #{0} "{1}".
 
-courses-delete-confirmation=Are you sure?
+courses-delete-confirmation=Are you sure to delete the course?
+
+# Lectures
+lecture=Lecture
+lectures=Lectures
+lectures-lecture-id=Lecture ID
+lectures-name=Name
+lectures-description=Description
+lectures-video-link=Video Link
+lectures-user=Author
+lectures-create-date=Created On
+lectures-modified-date=Modified On
+
+lectures-list=Course #{0} "{1}" - Lectures List
+lectures-add-new=Add a new Lecture
+lectures-edit=Edit Lecture #{0} "{1}".
+
+lecture-delete-confirmation=Are you sure to delete the lecture?
 
 # Panel App
 category.site_administration.liferay_book=Liferay Book
