06-navigation: Courses - clay:navigation-bar

--- a/modules/liferay-courses-api/build.gradle
+++ b/modules/liferay-courses-api/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "release.portal.api"
+	compileOnly project(":modules:liferay-courses-manager:liferay-courses-manager-api")
 }
