06-navigation: Screen Navigation Framework

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -34,3 +34,7 @@ lecture-delete-confirmation=Are you sure to delete the lecture?
 
 # Panel App
 category.site_administration.liferay_book=Liferay Book
+
+# Screen Navigation
+screen-category-courses=Courses
+screen-category-lectures=Lectures
