--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -35,6 +35,10 @@ lecture-delete-confirmation=Are you sure to delete the lecture?
 # Panel App
 category.site_administration.liferay_book=Liferay Book
 
+# Navigation Tabs
+tab-my-courses=My Courses
+tab-all-courses=All Courses
+
 # Screen Navigation
 screen-category-courses=Courses
 screen-category-lectures=Lectures
