07-friendly-urls: Courses List Portlet

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -1,5 +1,6 @@
 javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesPortlet=Liferay Courses
 javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesAdminPortlet=Liferay Courses
+javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesListPortlet=Liferay Courses List
 
 # Courses
 course=Course
@@ -13,6 +14,7 @@ courses-modified-date=Modified On
 courses-add-new=Add a new Course
 courses-edit=Edit Course #{0} "{1}".
 
+courses-empty-list=No Courses Found
 courses-delete-confirmation=Are you sure to delete the course?
 
 # Lectures
@@ -30,6 +32,7 @@ lectures-list=Course #{0} "{1}" - Lectures List
 lectures-add-new=Add a new Lecture
 lectures-edit=Edit Lecture #{0} "{1}".
 
+lectures-empty-list=No Lectures Found
 lecture-delete-confirmation=Are you sure to delete the lecture?
 
 # Panel App
