07-friendly-urls: Courses Admin - urlTitle for Course

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -6,6 +6,7 @@ javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesListPortlet=Lifera
 course=Course
 courses-course-id=Course ID
 courses-name=Name
+courses-url-title=URL Title
 courses-description=Description
 courses-user=Author
 courses-create-date=Created On
