07-friendly-urls: Courses Admin - urlTitle for Lecture

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -23,6 +23,7 @@ lecture=Lecture
 lectures=Lectures
 lectures-lecture-id=Lecture ID
 lectures-name=Name
+lectures-url-title=URL Title
 lectures-description=Description
 lectures-video-link=Video Link
 lectures-user=Author
@@ -42,7 +43,3 @@ category.site_administration.liferay_book=Liferay Book
 # Navigation Tabs
 tab-my-courses=My Courses
 tab-all-courses=All Courses
-
-# Screen Navigation
-screen-category-courses=Courses
-screen-category-lectures=Lectures
