08-portlet-configuration: Course Display Configuration

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -43,3 +43,8 @@ category.site_administration.liferay_book=Liferay Book
 # Navigation Tabs
 tab-my-courses=My Courses
 tab-all-courses=All Courses
+
+# Configuration
+course-display-configuration-title=Course Display Configuration
+course-display-configuration-select-course=Select Course to Display
+course-display-configuration-alert=Please, select a Course to display in Portlet Configuration.
