08-portlet-configuration: Course Display Configuration - urlTitle

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -46,5 +46,6 @@ tab-all-courses=All Courses
 
 # Configuration
 course-display-configuration-title=Course Display Configuration
-course-display-configuration-select-course=Select Course to Display
+course-display-configuration-url-title=Course URL Title
+course-display-configuration-url-title-help=Specify the urlTitle of a course to display
 course-display-configuration-alert=Please, select a Course to display in Portlet Configuration.
