08-portlet-configuration: Courses Display - display style

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -48,4 +48,5 @@ tab-all-courses=All Courses
 course-display-configuration-title=Course Display Configuration
 course-display-configuration-url-title=Course URL Title
 course-display-configuration-url-title-help=Specify the urlTitle of a course to display
+course-display-configuration-display-style=Display Style
 course-display-configuration-alert=Please, select a Course to display in Portlet Configuration.
