--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -50,3 +50,6 @@ course-display-configuration-url-title=Course URL Title
 course-display-configuration-url-title-help=Specify the urlTitle of a course to display
 course-display-configuration-display-style=Display Style
 course-display-configuration-alert=Please, select a Course to display in Portlet Configuration.
+
+category.liferay-book=Liferay Book
+course-display-portlet-instance-configuration-name=Liferay Courses
