08-portlet-configuration: Courses Display - Item Selector

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -46,9 +46,9 @@ tab-all-courses=All Courses
 
 # Configuration
 course-display-configuration-title=Course Display Configuration
-course-display-configuration-url-title=Course URL Title
-course-display-configuration-url-title-help=Specify the urlTitle of a course to display
 course-display-configuration-display-style=Display Style
+course-display-configuration-course-display-style=Course Display Style
+course-display-configuration-select-course=Select Course
 course-display-configuration-alert=Please, select a Course to display in Portlet Configuration.
 
 category.liferay-book=Liferay Book
