10-asset-framework: Asset Framework integration, refactoring

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -1,6 +1,9 @@
 javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesPortlet=Liferay Courses
+javax.portlet.title.com_liferaybook_courses_web_LiferayCourseDisplayPortlet=Liferay Course Display
 javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesAdminPortlet=Liferay Courses
-javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesListPortlet=Liferay Courses List
+javax.portlet.title.com_liferaybook_courses_web_MyLiferayCoursesPortlet=My Courses
+
+model.resource.com.liferaybook.courses.manager.model.Course=Liferay Course
 
 # Courses
 course=Course
