10-asset-framework: collection provider, widget template, categorization

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -14,6 +14,8 @@ courses-description=Description
 courses-user=Author
 courses-create-date=Created On
 courses-modified-date=Modified On
+courses-categories=Categories
+courses-tags=Tags
 
 courses-add-new=Add a new Course
 courses-edit=Edit Course #{0} "{1}".
@@ -56,3 +58,9 @@ course-display-configuration-alert=Please, select a Course to display in Portlet
 
 category.liferay-book=Liferay Book
 course-display-portlet-instance-configuration-name=Liferay Courses
+
+# Asset Framework
+my-courses=My Courses
+
+# Categorization
+course-category-required=Course category is required.
