10-asset-framework: view count - refactoring

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -14,6 +14,7 @@ courses-description=Description
 courses-user=Author
 courses-create-date=Created On
 courses-modified-date=Modified On
+courses-view-count=View Count
 courses-categories=Categories
 courses-tags=Tags
 
