10-asset-framework: asset priority

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -17,12 +17,19 @@ courses-modified-date=Modified On
 courses-view-count=View Count
 courses-categories=Categories
 courses-tags=Tags
+courses-priority=Priority
 
 courses-add-new=Add a new Course
 courses-edit=Edit Course #{0} "{1}".
 
 courses-empty-list=No Courses Found
 courses-delete-confirmation=Are you sure to delete the course?
+
+# Edit Course
+fieldset-related-courses=Related Courses
+fieldset-priority=Prioritization
+course-priority=Course Priority
+course-priority-help=Define the course priority (0-99)
 
 # Lectures
 lecture=Lecture
