11-the-info-framework: Display Page Template

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -4,6 +4,7 @@ javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesAdminPortlet=Lifer
 javax.portlet.title.com_liferaybook_courses_web_MyLiferayCoursesPortlet=My Courses
 
 model.resource.com.liferaybook.courses.manager.model.Course=Liferay Course
+model.resource.com.liferaybook.courses.manager.model.Lecture=Lecture
 
 # Courses
 course=Course
@@ -69,6 +70,35 @@ course-display-portlet-instance-configuration-name=Liferay Courses
 
 # Asset Framework
 my-courses=My Courses
+all-courses=All Courses
+course-lectures=Course Lectures
 
 # Categorization
 course-category-required=Course category is required.
+
+# The Info Framework
+my-lectures=My Lectures
+
+section-general-information=General Information
+field-course-name=Course Name
+field-course-description=Course Description
+field-course-url-title=URL Title
+
+section-stats-information=Course Statistics
+field-course-ratings=Ratings
+field-course-view-count=View Count
+field-course-comments-count=Comments Count
+field-course-subscribed-users=Subscribed Users Count
+
+section-audit-information=Course Audit Information
+field-course-author=Course Author
+field-course-created-on=Created On
+field-course-last-modified-on=Last Modified On
+field-course-lectures-count=Lectures Count
+
+section-display-information=Display Information
+field-course-display-url=Course Display URL
+
+field-lecture-name=Lecture Name
+field-lecture-description=Lecture Description
+field-lecture-video-url=Lecture Video URL
