11-the-info-framework: info filters

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -102,3 +102,6 @@ field-course-display-url=Course Display URL
 field-lecture-name=Lecture Name
 field-lecture-description=Lecture Description
 field-lecture-video-url=Lecture Video URL
+
+filter-author-label=Course Author
+filter-author-placeholder=Select Author
