12-permissions: Portlet and Model Permissions

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -1,6 +1,6 @@
 javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesPortlet=Liferay Courses
 javax.portlet.title.com_liferaybook_courses_web_LiferayCourseDisplayPortlet=Liferay Course Display
-javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesAdminPortlet=Liferay Courses
+javax.portlet.title.com_liferaybook_courses_web_LiferayCoursesAdminPortlet=Liferay Courses Admin
 javax.portlet.title.com_liferaybook_courses_web_MyLiferayCoursesPortlet=My Courses
 
 model.resource.com.liferaybook.courses.manager.model.Course=Liferay Course
@@ -31,6 +31,8 @@ fieldset-related-courses=Related Courses
 fieldset-priority=Prioritization
 course-priority=Course Priority
 course-priority-help=Define the course priority (0-99)
+fieldset-course-permissions=Course Permissions
+fieldset-lecture-permissions=Lecture Permissions
 
 # Lectures
 lecture=Lecture
@@ -105,3 +107,8 @@ field-lecture-video-url=Lecture Video URL
 
 filter-author-label=Course Author
 filter-author-placeholder=Select Author
+
+# Permissions
+action.ADD_COURSE=Add Course
+action.ADD_LECTURE=Add Lecture
+model.resource.com.liferaybook.courses=Courses
