13-search: Search functionality in Courses List widget

--- a/modules/liferay-courses-web/src/main/resources/content/Language.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language.properties
@@ -112,3 +112,11 @@ filter-author-placeholder=Select Author
 action.ADD_COURSE=Add Course
 action.ADD_LECTURE=Add Lecture
 model.resource.com.liferaybook.courses=Courses
+
+# Search
+courses-search-no-courses=No Courses Found.
+courses-search-term=Search Term
+courses-search-author=Course Author
+courses-search-select-author=Select Course Author
+courses-search-category=Course Category
+courses-search-select-category=Select Category
